--- a/assets/web/css/templatemo-style.css
+++ b/assets/web/css/templatemo-style.css
@@ -127,6 +127,7 @@ section {
 
 #profile,
 #gallery,
+#list,
 #map {
 	text-align: center;
 }
@@ -575,6 +576,101 @@ section {
 	background: rgba(0, 0, 0, 0.8);
 }
 
+/*---------------------------------------
+     Menu         
+  -----------------------------------------*/
+
+#list {
+	padding-bottom: 0;
+}
+
+#list .container {
+	width: 100%;
+}
+
+#list .col-md-4 {
+	margin: 0;
+	padding: 0;
+}
+
+.menu-thumb img {
+	width: 1080px;
+	height: 380px;
+	transition: 0.5s;
+}
+
+.menu-thumb:hover img {
+	transform: scale(1.15);
+}
+
+#list .menu-thumb {
+	overflow: hidden;
+	position: relative;
+	cursor: pointer;
+	width: 102%;
+}
+
+.menu-thumb .menu-info {
+	position: absolute;
+	top: 60%;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	text-align: left;
+	padding: 25px 30px;
+	transition: 0.5s 0.2s;
+}
+
+.menu-info .menu-item {
+	float: left;
+}
+
+.menu-info .menu-price {
+	float: right;
+}
+
+.menu-info .menu-price span {
+	font-size: 20px;
+	font-weight: bold;
+	line-height: normal;
+	display: block;
+	margin-top: 10px;
+}
+
+.menu-thumb .menu-info h3,
+.menu-thumb .menu-info p,
+.menu-thumb .menu-info span {
+	transform: translateY(100%);
+	opacity: 0;
+	display: block;
+	transition: 0.5s 0.2s;
+	color: #ffffff;
+	z-index: 2;
+	position: relative;
+}
+
+.menu-thumb .menu-info h3 {
+	margin-top: 0;
+}
+
+.menu-thumb .menu-info p {
+	color: #d9d9d9;
+	text-transform: uppercase;
+	font-size: 10px;
+	font-weight: bold;
+	letter-spacing: 1px;
+}
+
+.menu-thumb:hover .menu-info h3,
+.menu-thumb:hover .menu-info p,
+.menu-thumb:hover .menu-info span {
+	transform: translateY(0px);
+	opacity: 1;
+}
+
+.menu-thumb:hover .menu-info {
+	background: rgba(0, 0, 0, 0.8);
+}
 
 
 
@@ -942,6 +1038,10 @@ footer .social-icon {
 	}
 
 	#gallery .menu-thumb {
+		width: 103%;
+	}
+
+	#list .menu-thumb {
 		width: 103%;
 	}
 
